deploy/internal/apps/label-studio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: label-studio
  namespace: label-studio
  labels:
    app: label-studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: label-studio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: label-studio
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: label-studio
          image: heartexlabs/label-studio:latest
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 768Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /label-studio/data
              name: label-studio-data
      volumes:
        - name: label-studio-data
          persistentVolumeClaim:
            claimName: label-studio
