deploy/internal/apps/label-studio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: label-studio
  namespace: label-studio
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://label-studio.internal.ticklethepanda.co.uk
    gethomepage.dev/name: Label Studio
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: mdi-tag-multiple
    gethomepage.dev/description: Data labelling
    gethomepage.dev/pod-selector: app=label-studio
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`label-studio.internal.ticklethepanda.co.uk`)
      middlewares:
        - name: tinyauth
          namespace: tinyauth
      services:
        - name: label-studio
          namespace: label-studio
          port: 80
